--- a/woorischool/Views/Cells/SPHomeClassInfoCollectionViewCell.xib
+++ b/woorischool/Views/Cells/SPHomeClassInfoCollectionViewCell.xib
@@ -61,59 +61,64 @@
                                 <color key="textColor" name="brownGrey"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fan-CI-ym2">
-                                <rect key="frame" x="12" y="85" width="364" height="1"/>
-                                <color key="backgroundColor" name="veryLightPink"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AfW-db-uvK" customClass="CustomView" customModule="우리스쿨" customModuleProvider="target">
+                                <rect key="frame" x="17" y="94" width="354" height="44"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10월 21일자 알림장" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHq-IN-F2E">
+                                        <rect key="frame" x="113" y="12.5" width="128" height="19"/>
+                                        <fontDescription key="fontDescription" name="NotoSansCJKkr-Medium" family="Noto Sans CJK KR" pointSize="16"/>
+                                        <color key="textColor" name="dodgerBlue"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="n.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="94e-tg-8Jh">
+                                        <rect key="frame" x="246" y="8" width="16" height="15"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="tintColor" name="grapefruit"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="16" id="GxP-qA-7Ea"/>
+                                            <constraint firstAttribute="height" constant="16" id="uvZ-Uk-LGg"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1TX-5W-CFy">
+                                        <rect key="frame" x="0.0" y="0.0" width="354" height="44"/>
+                                        <connections>
+                                            <action selector="showDailyNotiVIewEvent:" destination="gTV-IL-0wX" eventType="touchUpInside" id="gXX-EF-qIL"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="dodgerBlue12"/>
+                                <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="1" id="KZP-8K-atJ"/>
+                                    <constraint firstItem="94e-tg-8Jh" firstAttribute="leading" secondItem="aHq-IN-F2E" secondAttribute="trailing" constant="5" id="3xP-L7-v3E"/>
+                                    <constraint firstItem="1TX-5W-CFy" firstAttribute="leading" secondItem="AfW-db-uvK" secondAttribute="leading" id="DeE-0X-3bv"/>
+                                    <constraint firstAttribute="trailing" secondItem="1TX-5W-CFy" secondAttribute="trailing" id="Eye-bp-csN"/>
+                                    <constraint firstAttribute="bottom" secondItem="1TX-5W-CFy" secondAttribute="bottom" id="Gir-OM-DiT"/>
+                                    <constraint firstItem="aHq-IN-F2E" firstAttribute="centerX" secondItem="AfW-db-uvK" secondAttribute="centerX" id="V49-J3-m4d"/>
+                                    <constraint firstItem="94e-tg-8Jh" firstAttribute="top" secondItem="aHq-IN-F2E" secondAttribute="top" constant="-5" id="Zp7-mu-7Ht"/>
+                                    <constraint firstAttribute="height" constant="44" id="hxj-Cl-Xmb"/>
+                                    <constraint firstItem="aHq-IN-F2E" firstAttribute="centerY" secondItem="AfW-db-uvK" secondAttribute="centerY" id="wo1-kb-6rf"/>
+                                    <constraint firstItem="1TX-5W-CFy" firstAttribute="top" secondItem="AfW-db-uvK" secondAttribute="top" id="xPA-eZ-979"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="conerRadius">
+                                        <real key="value" value="6"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="준비물" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nbv-AN-68L">
-                                <rect key="frame" x="22" y="93" width="36.5" height="16.5"/>
-                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                <color key="textColor" name="brownGrey"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qcf-rb-Gub">
-                                <rect key="frame" x="67.5" y="93" width="34.5" height="16.5"/>
-                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                <color key="textColor" name="greyishBrown"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="숙제" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eAZ-pX-wQo">
-                                <rect key="frame" x="22" y="166.5" width="24.5" height="16.5"/>
-                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                <color key="textColor" name="brownGrey"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdC-Rw-2ev">
-                                <rect key="frame" x="67.5" y="166.5" width="34.5" height="16.5"/>
-                                <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="14"/>
-                                <color key="textColor" name="greyishBrown"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="fan-CI-ym2" firstAttribute="leading" secondItem="Xwr-fQ-8AS" secondAttribute="leading" constant="12" id="3ud-zr-ktS"/>
-                            <constraint firstItem="Nbv-AN-68L" firstAttribute="leading" secondItem="Xwr-fQ-8AS" secondAttribute="leading" constant="22" id="9Ok-Jr-Wqg"/>
+                            <constraint firstAttribute="trailing" secondItem="AfW-db-uvK" secondAttribute="trailing" constant="17" id="3s8-V7-Kd9"/>
                             <constraint firstAttribute="trailing" secondItem="8wt-2b-fDP" secondAttribute="trailing" constant="17" id="BxX-ao-eDZ"/>
-                            <constraint firstItem="Nbv-AN-68L" firstAttribute="top" secondItem="fan-CI-ym2" secondAttribute="bottom" constant="7" id="Cox-4T-TvM"/>
                             <constraint firstItem="lTP-zU-53f" firstAttribute="leading" secondItem="Xwr-fQ-8AS" secondAttribute="leading" constant="20" id="GAm-23-VsG"/>
-                            <constraint firstItem="cdC-Rw-2ev" firstAttribute="leading" secondItem="Qcf-rb-Gub" secondAttribute="leading" id="HsY-Lo-b1m"/>
                             <constraint firstItem="cyX-NE-4g1" firstAttribute="bottom" secondItem="lTP-zU-53f" secondAttribute="bottom" constant="5" id="KGw-jW-DKC"/>
-                            <constraint firstItem="cdC-Rw-2ev" firstAttribute="centerY" secondItem="eAZ-pX-wQo" secondAttribute="centerY" id="N9A-F5-CIl"/>
-                            <constraint firstItem="eAZ-pX-wQo" firstAttribute="leading" secondItem="Xwr-fQ-8AS" secondAttribute="leading" constant="22" id="TGm-pi-fY8"/>
-                            <constraint firstAttribute="trailing" secondItem="fan-CI-ym2" secondAttribute="trailing" constant="12" id="TeY-QQ-KZ6"/>
-                            <constraint firstItem="Qcf-rb-Gub" firstAttribute="centerY" secondItem="Nbv-AN-68L" secondAttribute="centerY" id="Xct-lR-brT"/>
                             <constraint firstItem="8wt-2b-fDP" firstAttribute="top" secondItem="gtd-ux-CO8" secondAttribute="bottom" constant="7" id="cyM-bf-bj9"/>
-                            <constraint firstItem="fan-CI-ym2" firstAttribute="top" secondItem="cyX-NE-4g1" secondAttribute="bottom" constant="16" id="eNf-bW-oFZ"/>
-                            <constraint firstAttribute="bottom" secondItem="eAZ-pX-wQo" secondAttribute="bottom" constant="12" id="fYn-E4-hB0"/>
                             <constraint firstItem="cyX-NE-4g1" firstAttribute="leading" secondItem="lTP-zU-53f" secondAttribute="trailing" constant="12" id="fr6-ur-rea"/>
-                            <constraint firstItem="Qcf-rb-Gub" firstAttribute="leading" secondItem="Nbv-AN-68L" secondAttribute="trailing" constant="9" id="hIA-uo-DhU"/>
                             <constraint firstItem="0kd-7N-87N" firstAttribute="top" secondItem="lTP-zU-53f" secondAttribute="top" constant="-5" id="hcf-GJ-R45"/>
+                            <constraint firstItem="AfW-db-uvK" firstAttribute="top" secondItem="lTP-zU-53f" secondAttribute="bottom" constant="30" id="lAR-6P-6fF"/>
                             <constraint firstAttribute="trailing" secondItem="gtd-ux-CO8" secondAttribute="trailing" constant="17" id="mVz-E8-pOP"/>
                             <constraint firstItem="gtd-ux-CO8" firstAttribute="top" secondItem="Xwr-fQ-8AS" secondAttribute="top" constant="14" id="ud0-ia-vEJ"/>
+                            <constraint firstItem="AfW-db-uvK" firstAttribute="leading" secondItem="Xwr-fQ-8AS" secondAttribute="leading" constant="17" id="vev-qS-2X7"/>
                             <constraint firstItem="0kd-7N-87N" firstAttribute="leading" secondItem="lTP-zU-53f" secondAttribute="trailing" constant="12" id="wCS-nL-bd4"/>
                             <constraint firstItem="lTP-zU-53f" firstAttribute="top" secondItem="Xwr-fQ-8AS" secondAttribute="top" constant="20" id="wil-a6-9EB"/>
                         </constraints>
@@ -148,25 +153,32 @@
             <connections>
                 <outlet property="attandImageView" destination="gtd-ux-CO8" id="FCB-Oo-i6d"/>
                 <outlet property="classTypeImageView" destination="lTP-zU-53f" id="oDs-gd-k5r"/>
+                <outlet property="dateLabel" destination="aHq-IN-F2E" id="qGf-eC-u0x"/>
                 <outlet property="eduTimeLabel" destination="8wt-2b-fDP" id="OB6-lm-Tq8"/>
-                <outlet property="homeWorkLabel" destination="cdC-Rw-2ev" id="Hf4-2B-ljV"/>
                 <outlet property="lectureNameLabel" destination="0kd-7N-87N" id="UYC-VS-KaV"/>
                 <outlet property="locationLabel" destination="cyX-NE-4g1" id="ree-84-yix"/>
-                <outlet property="prepareLabel" destination="Qcf-rb-Gub" id="G1e-3R-vQ6"/>
+                <outlet property="newImageView" destination="94e-tg-8Jh" id="6NJ-q0-gdG"/>
             </connections>
             <point key="canvasLocation" x="379.71014492753625" y="104.79910714285714"/>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="courseIcon1" width="44" height="44"/>
+        <image name="n.circle.fill" catalog="system" width="64" height="60"/>
         <namedColor name="brownGrey">
             <color red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="dodgerBlue">
+            <color red="0.19607843137254902" green="0.61568627450980395" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="dodgerBlue12">
+            <color red="0.19607843137254902" green="0.61568627450980395" blue="1" alpha="0.12" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="grapefruit">
+            <color red="0.94901960784313721" green="0.40392156862745099" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="greyishBrown">
             <color red="0.29019607843137257" green="0.29019607843137257" blue="0.29019607843137257" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="veryLightPink">
-            <color red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
