--- a/woorischool/Views/Parents/ModalViews/ParentsMainViewController.xib
+++ b/woorischool/Views/Parents/ModalViews/ParentsMainViewController.xib
@@ -214,15 +214,15 @@
                                         <constraint firstAttribute="height" constant="2" id="MFx-gj-Xyk"/>
                                     </constraints>
                                 </view>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scheduleMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Zwy-Q0-e1r">
+                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myMainIcon" translatesAutoresizingMaskIntoConstraints="NO" id="Zwy-Q0-e1r">
                                     <rect key="frame" x="15" y="10" width="20" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="Dd1-uf-yfF"/>
                                         <constraint firstAttribute="width" constant="20" id="JO5-ZB-3Mj"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림장" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg4-wN-Hy5">
-                                    <rect key="frame" x="12" y="30" width="26" height="20"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gg4-wN-Hy5">
+                                    <rect key="frame" x="17.5" y="30" width="15.5" height="20"/>
                                     <fontDescription key="fontDescription" name="NotoSansCJKkr-Regular" family="Noto Sans CJK KR" pointSize="10"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -297,7 +297,7 @@
         <image name="boardMainIcon" width="23" height="19"/>
         <image name="classMainIcon" width="22" height="20"/>
         <image name="homeMainIcon" width="22" height="21"/>
-        <image name="scheduleMainIcon" width="22" height="21"/>
+        <image name="myMainIcon" width="23" height="20"/>
         <image name="talkMainIcon" width="23" height="18"/>
         <namedColor name="greenishTeal">
             <color red="0.17254901960784313" green="0.77647058823529413" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
